--- a/src/bundles/GeniusDesign/BackendBundle/Resources/public/css/styles.css
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/public/css/styles.css
@@ -95,13 +95,15 @@ a,
     border: 1px solid gray;
     float: left;
     min-height: 300px;
-    margin: 0 10px 10px 0;
+    margin: 0 0 10px 0;
     width: 200px;
 }
 .main .content{
-    width: 900px;
+    float: left;
+    width: 888px;
+    padding: 0 0 0 10px;
 }
 .main .content textarea{
-    height: 250pxpx;
-    width: 880px;
+    height: 150px;
+    width: 860px;
 }
