--- a/src/bundles/GeniusDesign/BackendBundle/Resources/views/News/edit.html.twig
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/views/News/edit.html.twig
@@ -3,6 +3,10 @@
 {% block content %}
     <form method="post" action="{{ path('genius_news_edit', {'newsSlug': news.getTitleSlug(), 'language': language}) }}" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
+
+        {% if isImageVisible and news.getImageFileName() is not empty %}
+            <img src="{{ genius_design_file_path('genius_design_components_news', news.getImageFileName(), 'small', true, true) }}" />
+        {% endif %}
         
         <div class="form-navigation">
             <div class="submit-button"> {# contentsubmitButton #}
