--- a/src/bundles/GeniusDesign/BackendBundle/Resources/views/Security/login.html.twig
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/views/Security/login.html.twig
@@ -1,5 +1,5 @@
 {% extends 'GeniusDesignBackendBundle::layout.html.twig' %}
-{#% form_theme form 'MeritooBackendCmsBundle:Form:fields.html.twig' %#}
+{#% form_theme form 'GeniusDesignBackendBundle:Form:fields.html.twig' %#}
 
 {% block content %}
     <div id="loginFormContainer">
