--- a/src/bundles/GeniusDesign/BackendBundle/Resources/views/layout.html.twig
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/views/layout.html.twig
@@ -50,7 +50,7 @@
                     </div>
                 {% endif %}
                 <div class="content">
-
+                    {% include 'GeniusDesignBackendBundle:Messages:display.html.twig' %}
                     {% block content %}{% endblock %}
                 </div>
             </div>
