Language Bundle - supplement module, Common Bundle - prepare module for translations

--- a/src/bundles/GeniusDesign/Components/LanguageBundle/Resources/views/Language/languages-buttons.html.twig
+++ b/src/bundles/GeniusDesign/Components/LanguageBundle/Resources/views/Language/languages-buttons.html.twig
@@ -2,7 +2,7 @@
     <ul>
         {% for item in languages %}
             <li class="{{ item.getLanguageCode() }}{% if item.getLanguageCode() == currentLanguageCode %} current{% endif %}">
-                <a href="{{ path(routeName, parametersFromRequest | merge({languageParameterName: item.getLanguageCode()}) ) }}">
+                <a href="{{ path(routeName, parametersFromRequest | merge({'languageCode' : item.getLanguageCode()}) ) }}">
                     {% if not showNames or showBoth %}
                         <img src="{{ item.getFlagPath() }}">
                     {% endif %}
