News Bundle - generate thumbnails - updated, Remove picture - added, no picture added, Upload Helper - updated

--- a/src/bundles/GeniusDesign/BackendBundle/Resources/views/Content/edit.html.twig
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/views/Content/edit.html.twig
@@ -53,7 +53,7 @@
             </div>
 
             <div class="link last">
-                <a class="link cancel" href="{{ path('genius_content_list', {'languageCode': languageCode}) }}"></a>
+                <a class="link cancel" href="{{ path('genius_content_list', {'languageCode': languageCode}) }}">Anuluj</a>
             </div>
         </div>
     </form>
