Menu Bundle - added

--- a/src/bundles/GeniusDesign/BackendBundle/Resources/views/Content/edit.html.twig
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/views/Content/edit.html.twig
@@ -58,5 +58,6 @@
         </div>
     </form>
     
+    {#{ genius_design_content(content.getTitleSlug()) }#}
     {#{ tinymce_init() }#}
 {% endblock %}
