--- a/src/bundles/GeniusDesign/BackendBundle/Resources/views/layout.html.twig
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/views/layout.html.twig
@@ -43,15 +43,27 @@
             <div class="main">
                 {% if app.user is not empty %}
                     <div class="menu">Menu: 
-                        <ul>
-                            {% set parameters = {'languageCode': genius_design_current_language_code()} %}
-                            
-                            <li><a href="{{ path('genius_news_list', parameters) }}" class="">Aktualności</a></li>
-                            <li><a href="{{ path('genius_content_list', parameters) }}" class="">Treści</a></li>
-                        </ul>
                         
+                        {% set parameters = {'languageCode': genius_design_current_language_code()} %}
+                        {% set menu = {
+                            0: {
+                                'title': 'Aktualności',
+                                'url' : '',
+                                'routeName': 'genius_news_list',
+                                'parameters': parameters
+                                },
+                            1: {
+                                'title': 'Treści',
+                                'url' : '',
+                                'routeName': 'genius_content_list',
+                                'parameters': parameters
+                                }
+                        } 
+                        %}
+
+                        {{ display_simple_menu(menu, true, '', '', 'menu-left-bar') }}
+
                         <hr />
-                            
                         {% if genius_design_languages_defined() %}
                             {{ genius_design_show_languages() }}
                         {% endif %}
