--- a/src/bundles/GeniusDesign/BackendBundle/Resources/views/layout.html.twig
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/views/layout.html.twig
@@ -57,6 +57,12 @@
                                 'url' : '',
                                 'routeName': 'genius_content_list',
                                 'parameters': parameters
+                                },
+                            2: {
+                                'title': 'Galeria',
+                                'url' : '',
+                                'routeName': 'genius_gallery_list',
+                                'parameters': parameters
                                 }
                         } 
                         %}
