Simple User Bundle - added bundle to users manage - to backend

--- a/src/bundles/GeniusDesign/BackendBundle/Resources/views/layout.html.twig
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/views/layout.html.twig
@@ -63,6 +63,12 @@
                                 'url' : '',
                                 'routeName': 'genius_gallery_list',
                                 'parameters': parameters
+                                },
+                            3: {
+                                'title': 'Użytkownicy',
+                                'url' : '',
+                                'routeName': 'genius_simple_user_list',
+                                'parameters': parameters
                                 }
                         } 
                         %}
